--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
       <div class="logo">Header Logo</div>
 
       <ul>
-        <li><a href="#">header link one</a></li>
-        <li><a href="#">header link two</a></li>
-        <li><a href="#">header link three</a></li>
+        <li><a class="secondary-text" href="#">header link one</a></li>
+        <li><a class="secondary-text" href="#">header link two</a></li>
+        <li><a class="secondary-text" href="#">header link three</a></li>
       </ul>
     </div>
     <div class="hero">
       <div class="hero-left">
         <h1>This website is awesome</h1>
-        <p>
+        <p class="secondary-text">
           This website has some subtext that goes here under the main title.
           It's a smaller font and the color is lower contrast
         </p>
